LU-11380 llite: zero lum for stripeless files

In the IOC_MDC_GETFILEINFO/LL_IOC_MDC_GETINFO case of ll_dir_ioctl(),
if the file has no striping then zero out the lum buffer so that
userspace won't be confused by garbage.

Signed-off-by: John L. Hammond <jhammond@whamcloud.com>
Change-Id: I4574b8bfdee122ec1ac571ae3714026c6fa0a7f0
Reviewed-on: https://review.whamcloud.com/33172
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>